@@ -1,8 +1,10 @@
 package org.main;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.*;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -10,20 +12,22 @@ public class LaneSanitizer {
     private static final String APPELATION_HEADER = "w obszarze w³aœciwoœci";
     private static final String COURT_HEADER = "S¹d Rejonowy";
 
+    private static final Pattern COURT_NUMBER_DEP = Pattern.compile("^.* \\d+ .*$");
+
     public Map<String, List<String>> clean(String text) {
-        if (text == null || text.isEmpty() || text.isBlank()) {
+        if (StringUtils.isBlank(text)) {
             return Collections.emptyMap();
         }
-        List<String> verses = Arrays.stream(text.split("\n"))
+        final List<String> verses = Arrays.stream(text.split("\n"))
                 .map(String::trim)
                 .toList();
 
-        Map<String, List<String>> groupedLines = new HashMap<>();
+        final Map<String, List<String>> groupedLines = new HashMap<>();
         String currentAppelation = "";
         String currentCourt = "";
         for (String verse : verses) {
             if (!verse.startsWith(APPELATION_HEADER) && !verse.startsWith(COURT_HEADER) && !verse.trim().contains("Wydzia³")) {
-                log.warn("Omitting verse with unidentified structure: {}", verse);
+                log.warn("Omitting verse [{}] with unidentified structure: {}", verses.indexOf(verse), verse);
                 continue;
             }
 
@@ -33,30 +37,36 @@ public class LaneSanitizer {
                 continue;
             }
 
+            final boolean hasSimpleStructure = COURT_NUMBER_DEP.matcher(verse).matches();
             // not full info provided
-            if (verse.startsWith(COURT_HEADER) && !verse.matches("^.* \\d+ .*$")) {
+            if (verse.startsWith(COURT_HEADER) && !hasSimpleStructure) {
                 currentCourt = verse.trim();
                 continue;
             }
 
-            if (verse.startsWith(COURT_HEADER) && verse.matches("^.* \\d+ .*$")) {
+            if (verse.startsWith(COURT_HEADER) && hasSimpleStructure) {
                 groupedLines.get(currentAppelation).add(verse);
             } else {
                 // multiple vacancies or linebreak
-                String possibleCourt = currentCourt + " " + verse.trim();
-                if (possibleCourt.matches("^.* \\d+ .*$")) {
+                final String possibleCourt = currentCourt + " " + verse.trim();
+                if (COURT_NUMBER_DEP.matcher(possibleCourt).matches()) {
                     groupedLines.get(currentAppelation).add(possibleCourt);
                 } else {
-                    log.warn("Could not parse verse: {}", verse);
+                    log.warn("Could not parse verse [{}]: [{}]", verses.indexOf(verse), verse);
                 }
             }
         }
-        FileWriter.writeContentsToFile(LaneSanitizer.class,
-                groupedLines.entrySet().stream()
-                        .map(e -> e.getKey() + System
-                                .lineSeparator() + e.getValue().stream().collect(Collectors.joining(System.lineSeparator())))
-                        .collect(Collectors.joining()));
 
+        FileWriter.writeContentsToFile(LaneSanitizer.class, prepareForPrettyPrint(groupedLines));
         return groupedLines;
+    }
+
+    private String prepareForPrettyPrint(Map<String, List<String>> groupedLines) {
+        return groupedLines.entrySet().stream()
+                .map(e -> e.getKey() + System
+                        .lineSeparator() + e.getValue().stream()
+                        .map(x -> " - " + x)
+                        .collect(Collectors.joining(System.lineSeparator())))
+                .collect(Collectors.joining(System.lineSeparator()));
     }
 }
